--- a/ruby/2.7.0/gems/eventmachine-1.2.7/ext/Makefile
+++ b/ruby/2.7.0/gems/eventmachine-1.2.7/ext/Makefile
@@ -31,8 +31,8 @@ rubyhdrdir = $(includedir)/$(RUBY_VERSION_NAME)
 vendorarchdir = $(vendorlibdir)/$(sitearch)
 vendorlibdir = $(vendordir)/$(ruby_version)
 vendordir = $(rubylibprefix)/vendor_ruby
-sitearchdir = $(DESTDIR)./.gem.20200517-11329-d92wt4
-sitelibdir = $(DESTDIR)./.gem.20200517-11329-d92wt4
+sitearchdir = $(DESTDIR)./.gem.20200517-19753-j2sq0i
+sitelibdir = $(DESTDIR)./.gem.20200517-19753-j2sq0i
 sitedir = $(rubylibprefix)/site_ruby
 rubyarchdir = $(rubylibdir)/$(arch)
 rubylibdir = $(rubylibprefix)/$(ruby_version)
