--- a/ruby/2.7.0/gems/ffi-1.12.2/ext/ffi_c/Makefile
+++ b/ruby/2.7.0/gems/ffi-1.12.2/ext/ffi_c/Makefile
@@ -31,8 +31,8 @@ rubyhdrdir = $(includedir)/$(RUBY_VERSION_NAME)
 vendorarchdir = $(vendorlibdir)/$(sitearch)
 vendorlibdir = $(vendordir)/$(ruby_version)
 vendordir = $(rubylibprefix)/vendor_ruby
-sitearchdir = $(DESTDIR)./.gem.20200517-11329-16x512s
-sitelibdir = $(DESTDIR)./.gem.20200517-11329-16x512s
+sitearchdir = $(DESTDIR)./.gem.20200517-19753-7fl38k
+sitelibdir = $(DESTDIR)./.gem.20200517-19753-7fl38k
 sitedir = $(rubylibprefix)/site_ruby
 rubyarchdir = $(rubylibdir)/$(arch)
 rubylibdir = $(rubylibprefix)/$(ruby_version)
